--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>© برآوردگر قیمت طراحی سایت وردپرس — رابط مدرن، فلت و کاربرپسند</p>
+      <p>© برآوردگر قیمت طراحی سایت وردپرس — https://t.me/isamweb</p>
     </div>
   </footer>
 
